--- a/passwordGenerator.html
+++ b/passwordGenerator.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="includes/stylesheet.css">
     <!-- <link rel="stylesheet" type="text/css" href="includes/fontawesome-5.8.2.css"> -->
     <link rel="stylesheet" href="includes/bootstrap-toggle/bootstrap-toggle.min.css"></script>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="includes/jquery-3.4.1.min.js"></script>
     <script src="includes/bootstrap.min.js"></script>
     <script src="includes/scripts.js"></script>
@@ -56,17 +56,19 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center">
-                        <h3 class="text-center">Choosing a role</h3>
+                        <h3 class="text-center">Password generating</h3>
                     </div>
                 </div>
+
                 <div class="row">
                     <div class="col-md-6 col-sm-12">
-                        <a class="btn btn-primary btn-block mainActionBtn" href="create-account.html">Depositor</a>
+                        <button id="generatorHashcode">asdaasdass</button>
                     </div>
                     <div class="col-md-6 col-sm-12">
-                        <a class="btn btn-secondary btn-block mainActionBtn" href="create-account.html">Puller</a>
-                    </div> 
+                            <input type="text" name="placeHolder" id="generatorHashcode" class="fa">asdd></input>
+                    </div>   
+                </div>
             </div>
-    </main>
+        </main>
 </body>
 </html>
