--- a/Withdrawal.html
+++ b/Withdrawal.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
-<html>
-<!-- meta data -->
-
+<html lang="en">
 <head>
+    <link rel="stylesheet" href="includes/stylesheet.css">
+    <script src="includes/Withdrawal.js"></script>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1, use-scalable=0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <link rel="stylesheet" type="text/css" href="includes/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="includes/stylesheet.css">
     <!-- <link rel="stylesheet" type="text/css" href="includes/fontawesome-5.8.2.css"> -->
     <link rel="stylesheet" href="includes/bootstrap-toggle/bootstrap-toggle.min.css"></script>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="includes/jquery-3.4.1.min.js"></script>
     <script src="includes/bootstrap.min.js"></script>
     <script src="includes/scripts.js"></script>
     <script src="includes/bootstrap-toggle/bootstrap-toggle.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap-filestyle.min.js"> </script>
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-    <title>Lavado De Papel</title>
+    <title>Papel</title>
 </head>
-<body id="">
-    <div id="wrapper">
+<body>
+    <div id="wrapper1">
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <a class="navbar-brand" href="#">Lavado De Papel</a>
@@ -46,31 +51,39 @@
                             <a class="nav-link" href="#">Log Out</a>
                         </li>
                         <li class="nav-item">
-                                <h2 class="sumOfCash" href="#">₪50,000,000</h2>
+                            <h2 class="sumOfCash" href="#">₪50,000,000</h2>
                         </li>
                         <li class="nav-item">
                             <a id="userPic" href="#"></a>
                         </li>
-                        </ul>
                     </ul>
                 </div>
-            </nav>
+            </nav>          
         </header>
-        <main>
-            <div class="container">
-                <div class="row">
-                    <div class="col-12 text-center">
-                        <h3 class="text-center">Choosing a role</h3>
-                    </div>
+
+
+        <ul class="upperside">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <h3 class="text-center">Withdrawal</h3>
                 </div>
-                <div class="row">
-                    <div class="col-md-6 col-sm-12">
-                        <a class="btn btn-primary btn-block mainActionBtn" href="#">Depositor</a>
-                    </div>
-                    <div class="col-md-6 col-sm-12">
-                        <a class="btn btn-secondary btn-block mainActionBtn" href="Withdrawal.html">Puller</a>
-                    </div> 
             </div>
-    </main>
+            <br><br>
+            <form name="myForm" action="http://html5-book.co.il/teach/forms/get_form2.php" method="GET" autocomplete="on">
+                <label>Demanding sum: <input name="fullName"></label>
+                <br><br>
+                <br><br>
+                <label>Up to deviation of: </label> <input type="number" name="tech" value="2" min="2" max="60" step="2" > 
+                &nbsp &nbsp include interest: <input type="checkbox" name="hobbies" value="Reading Books"><br>
+                 <br><br>
+                 <br><br>
+            </form>
+        </ul>
+
+
+
+        
+        
+    </div>
 </body>
 </html>
