finishing Edit account page, by pulling data from server, and fixing links

--- a/EndedProcessDep.html
+++ b/EndedProcessDep.html
@@ -36,11 +36,8 @@
                             <a class="nav-link" href="#">History <span class="fas fas-factory"></span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Profile</a>
-                        </li>
-                        <li class="nav-item">
                             <!-- If user is registered - display Log Out button; Otherwise - Display Create Account-->
-                            <a class="nav-link" href="create-account.html">Create Account</a>
+                            <a class="nav-link" href="create-account.php">Create Account</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Log Out</a>
