--- a/QrScanner.html
+++ b/QrScanner.html
@@ -36,17 +36,14 @@
                             <a class="nav-link" href="#">History <span class="fas fas-factory"></span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Profile</a>
-                        </li>
-                        <li class="nav-item">
                             <!-- If user is registered - display Log Out button; Otherwise - Display Create Account-->
-                            <a class="nav-link" href="create-account.html">Create Account</a>
+                            <a class="nav-link" href="create-account.php">Create Account</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Log Out</a>
+                            <a class="nav-link" href="includes/logout.php">Log Out</a>
                         </li>
                         <li class="nav-item">
-                            <h2 class="sumOfCash" href="#">₪50,000,000</h2>
+                            <h2 class="sumOfCash" href="#">₪</h2>
                         </li>
                         <li class="nav-item">
                             <a id="userPic" href="#"></a>
