--- a/PasswordHandshake.html
+++ b/PasswordHandshake.html
@@ -29,7 +29,7 @@
                             <input id="isActiveDepositorToggleBtn" type="checkbox" data-toggle="toggle">
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="Withdrawal.html">Widthraw<span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="depositor-list.php">Widthraw<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">History <span class="fas fas-factory"></span></a>
@@ -78,7 +78,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6 col-sm-12">
-                            <a class="btn btn-primary btn-block btn-danger mainActionBtn" href="Withdrawal.html">cancel</a>
+                            <a class="btn btn-primary btn-block btn-danger mainActionBtn" href="depositor-list.php">cancel</a>
                         </div>
                         <div class="col-md-6 col-sm-12">
                             <a class="btn btn-secondary btn-block btn-success mainActionBtn" href="#">got the password</a>
