Make the checkbox of the IsDepositor & IsPuller by dynamic from DB

--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
                 </form>
                 <p id="incorrectCredentials">Username or Password is incorrect</p>
                 <div id="formFooter">
-                    <a class="underlineHover" href="create-account.php?newUser=true">Register</a>
+                    <a class="underlineHover" href="account-details.php?newUser=true">Register</a>
                 </div>
             
             </div>
