--- a/EndedProcessPu.html
+++ b/EndedProcessPu.html
@@ -26,9 +26,6 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav mr-auto">
-                        <li class="nav-item isActiveDespositorToggle">
-                            <input id="isActiveDepositorToggleBtn" type="checkbox" data-toggle="toggle">
-                        </li>
                         <li class="nav-item active">
                             <a class="nav-link" href="depositor-list.php">Widthraw<span class="sr-only">(current)</span></a>
                         </li>
@@ -37,10 +34,10 @@
                         </li>
                         <li class="nav-item">
                             <!-- If user is registered - display Log Out button; Otherwise - Display Create Account-->
-                            <a class="nav-link" href="create-account.php">Create Account</a>
+                            <a class="nav-link" href="account-details.php">Create Account</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Log Out</a>
+                            <a class="nav-link" href="includes/logout.php">Log Out</a>
                         </li>
                         <li class="nav-item">
                             <h2 class="sumOfCash" href="#">₪</h2>
